--- a/src/humanize/locale/pl_PL/LC_MESSAGES/humanize.po
+++ b/src/humanize/locale/pl_PL/LC_MESSAGES/humanize.po
@@ -2,6 +2,7 @@
 # Copyright (C) 2020 THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # Bartosz Bubak <bartosz.bubak@gmail.com>, 2020.
+# Added missing strings by Krystian Postek <krystian postek eu>, 2020.
 #
 msgid ""
 msgstr ""
@@ -246,7 +247,7 @@ msgstr[2] "1 rok, %d dni"
 
 #: src/humanize/time.py:165
 msgid "1 year, 1 month"
-msgstr ""
+msgstr "1 rok, 1 miesiąc"
 
 #: src/humanize/time.py:168
 #, python-format
@@ -293,4 +294,4 @@ msgstr "wczoraj"
 #: src/humanize/time.py:498
 #, python-format
 msgid "%s and %s"
-msgstr ""
+msgstr "%s i %s"
